--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<h1>RxJS Course</h1>
-<hr>
-
-<app-observer></app-observer>
-<hr>
-
-<app-interval-timer></app-interval-timer>
-<hr>
+<div class="container">
+    <h1>RxJS Course</h1>
+    <hr>
+    
+    <app-observer></app-observer>
+    <hr>
+    
+    <app-interval-timer></app-interval-timer>
+    <hr>
+    
+    <app-fromevent></app-fromevent>
+</div>
