testing share operator

--- a/src/app/_components/tap/tap.component.html
+++ b/src/app/_components/tap/tap.component.html
@@ -2,5 +2,5 @@
 
 <p>
     click anywhere on the page 
-    and see the result in console!
+    and see the <strong>result in console!</strong>
 </p>
