add background color to title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>RxJS Course</h1>
+    <h1 class="bg-yellow">RxJS Course</h1>
     <hr>
     
     <app-observer></app-observer>
